--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div>   
+    <div background=lime;>   
 <h1> WELCOME TO MY PERSONAL PORTFOLIO </h1>
-color: red;
+
     </div>
     <ul type="circle">
         <li><a href="#intro">INTRODUCTION</a></li>
