--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <div background=lime;>   
+    <div>   
 <h1> WELCOME TO MY PERSONAL PORTFOLIO </h1>
 
     </div>
