--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
-<body>
+<body bgcolor:yellow>
     <div>   
 <h1> WELCOME TO MY PERSONAL PORTFOLIO </h1>
 
@@ -27,7 +27,7 @@
 
     <div id="ABOUT">
 <h2>ABOUT MYSELF</h2>
-<table>
+<table border="3">
     <tr>
         <td><b>Name</b></td>
         <td>Ratul Chatterjee</td>
