--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
-<body bgcolor:yellow>
+<body bgcolor="yellow">
     <div>   
 <h1> WELCOME TO MY PERSONAL PORTFOLIO </h1>
 
