--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<style>
+.to
+{
+    color: cyan;
+    background: black;
+}
+</style>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,11 +14,11 @@
     <title>Portfolio</title>
 </head>
 <body bgcolor="yellow">
-    <div>   
-<h1> WELCOME TO MY PERSONAL PORTFOLIO </h1>
+    <div class="to">   
+<h1> <u>WELCOME TO MY PERSONAL PORTFOLIO </h1></u>
 
     </div>
-    <ul type="circle">
+    <ul type="square">
         <li><a href="#intro">INTRODUCTION</a></li>
         <li><a href="#ABOUT" >ABOUT MYSELF</a></li>
         <li><a href="#education"> EDUCATION</a></li>
@@ -20,13 +27,13 @@
     <img src="my image.jpg" width=200 height=300 alt="Error image">
 
     <div id="intro">
-        <h2> INTRODUCTION </h2>
+        <h2> INTRODUCTION:- </h2>
         <P> Hi everyone i am Ratul Chatterjee. I am currently pursuing my B.Sc Honours in
              computer science in Ramakrishna Mission Vivekananda Centenary College (R.K.M.V.C.C)</P>
         </div>
 
     <div id="ABOUT">
-<h2>ABOUT MYSELF</h2>
+<h2>ABOUT MYSELF:-</h2>
 <table border="3">
     <tr>
         <td><b>Name</b></td>
@@ -47,7 +54,7 @@
 </table>
 </div>
 <div id="education" >
-<h2>EDUCATION</h2>
+<h2>EDUCATION:-</h2>
 <p> In my life i have studied in two schools</p>
 <p><b>INSITUTION 1</b>: I have studied from nursury to class 4 in Ghosh Memorial Primary School</p>
 <p><b>INSITUTION 2</b>: I have studied from class 5 to class 12 in Naihati Narendra Vidyaniketan (H.S)</p>
@@ -70,7 +77,7 @@
 </table>
 </div>
 <div id="contact">
-    <h2>CONTACT DETAILS</h2>
+    <h2>CONTACT DETAILS:-</h2>
 
     <p><b>Email: </b><a href="mailto:rc185047@gmail.com">rc185047@gmail.com</a></p>
     <p><b>Youtube: </b><a href="https://www.youtube.com/">youtube</a></p>
