--- a/index.html
+++ b/index.html
@@ -62,16 +62,19 @@
     <tr>
         <th>Class</th>
         <th>Marks</th>
+         <th>Full Marks</th>
         <th>Percentage</th>
     </tr>
     <tr>
         <td>Madyamik(10)</td>
         <td>526</td>
+        <td>700</td>
         <td>75.14%</td>
     </tr>
     <tr>
         <td>Higher Secondry(12)</td>
         <td>400</td>
+         <td>400</td>
         <td>80.00%</td>
     </tr>
 </table>
