--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="#intro">INTRODUCTION</a></li>
         <li><a href="#ABOUT" >ABOUT MYSELF</a></li>
         <li><a href="#education"> EDUCATION</a></li>
+        <li><a href="#draw">EXTRA CURRICULAR ACTIVITIES</a></li>
         <li> <a href="#contact">CONTACT DETAILS</a></li>
     </ul>
     <img src="my image.jpg" width=400 height=400 alt="Error image">
@@ -30,6 +31,7 @@
         <h2> INTRODUCTION:- </h2>
         <P> Hi everyone i am Ratul Chatterjee. I am currently pursuing my B.Sc Honours in
              computer science in Ramakrishna Mission Vivekananda Centenary College (R.K.M.V.C.C)</P>
+        <h6><a href="https://www.rkmvccrahara.org/">click here to go to the website. </a></h6>
         </div>
 
     <div id="ABOUT">
@@ -55,9 +57,11 @@
 </div>
 <div id="education" >
 <h2>EDUCATION:-</h2>
-<p> In my life i have studied in two schools</p>
+<p> In my life i have studied in two institutions</p>
 <p><b>INSITUTION 1</b>: I have studied from nursury to class 4 in Ghosh Memorial Primary School</p>
+    <h6>unfortunately website is not available</h6>
 <p><b>INSITUTION 2</b>: I have studied from class 5 to class 12 in Naihati Narendra Vidyaniketan (H.S)</p>
+    <h6><a href="https://nnv.org.in/">click here to go to the website. </a></h6>
 <table border="2">
     <tr>
         <th>Class</th>
@@ -79,6 +83,11 @@
     </tr>
 </table>
 </div>
+    <div id="draw">
+        <h2>EXTRA CURRICULAR ACTIVITIES</h2>
+        <P>I have also learned drawing. And had given exams from PP1 to 3rd year of drawing.I have also participated in several 
+            drawing competition and have received prizes from few of them</P>
+    </div>
 <div id="contact">
     <h2>CONTACT DETAILS:-</h2>
 
