--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2> INTRODUCTION:- </h2>
         <P> Hi everyone i am Ratul Chatterjee. I am currently pursuing my B.Sc Honours in
              computer science in Ramakrishna Mission Vivekananda Centenary College (R.K.M.V.C.C)</P>
-        <h6><a href="https://www.rkmvccrahara.org/">click here to go to the website. </a></h6>
+        <h5><a href="https://www.rkmvccrahara.org/">click here to go to the website.target="_blank" </a></h5>
         </div>
 
     <div id="ABOUT">
@@ -63,7 +63,7 @@
 <p><b>INSITUTION 1</b>: I have studied from nursury to class 4 in Ghosh Memorial Primary School</p>
     <h6>unfortunately website is not available</h6>
 <p><b>INSITUTION 2</b>: I have studied from class 5 to class 12 in Naihati Narendra Vidyaniketan (H.S)</p>
-    <h6><a href="https://nnv.org.in/">click here to go to the website. </a></h6>
+    <h5><a href="https://nnv.org.in/">click here to go to the website.target="_blank" </a></h5>
 <table border="2">
     <tr>
         <th>Class</th>
@@ -93,10 +93,10 @@
 <div id="contact">
     <h2>CONTACT DETAILS:-</h2>
 
-    <p><b>Email: </b><a href="mailto:rc185047@gmail.com">rc185047@gmail.com</a></p>
-    <p><b>Youtube: </b><a href="https://www.youtube.com/">youtube</a></p>
-    <p><b>Instagram: </b><a href="https://www.instagram.com/">insta</a></p>
-    <p><b>Facebook: </b><a href="https://www.facebook.com/">fb</a></p>
+    <p><b>Email: </b><a href="mailto:rc185047@gmail.com">rc185047@gmail.com target="_blank"</a></p>
+    <p><b>Youtube: </b><a href="https://www.youtube.com/">youtube target="_blank"</a></p>
+    <p><b>Instagram: </b><a href="https://www.instagram.com/">insta target="_blank"</a></p>
+    <p><b>Facebook: </b><a href="https://www.facebook.com/">fb target="_blank"</a></p>
     <p><b>Phone No: </b>+91 7439057231</p>
 </div>
 </body>
